# heatpump-analysis

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.toml  heating-monitoring-setup.md
.github/workflows/: thermal-regression.yml
.test-audit/: failure-critique-applied.jsonl  mutation-ledger.jsonl  mutation-ledger.v4-pre-branch-input.jsonl  seam-queue.json
cosy-scheduler/: Cargo.toml
cosy-scheduler/src/: main.rs
deploy/: SECRETS.md  adaptive-heating-mvp.service
docs/: README.md  adaptive-heating-control.md  adaptive-heating-mvp.md  adaptive-heating-v2-design.md  current-production-state.md  dhw-auto-trigger.md  dhw-cylinder-analysis.md  dhw-fixes.md  dhw-improved-model.md  dhw-plan.md  dhw-reference.md  dimensions-canonical-status.md  dynamic-curve-strategy.md  emon-installation-runbook.md  emonpi-rebuild-status-2026-03-20.md  explanation.md  heating-plan.md  heating-reference.md  history-evidence-plan.md  history-evidence-workflows.md  history-query-architecture-plan.md  house-layout.md  hydraulic-analysis.md  live-queries.md  octopus-data-inventory.md  overnight-strategy-analysis.md  phase5-house-input-revalidation-2026-03-28.md  pico-ebus-plan.md  roadmap.md  room-thermal-model.md  rust-migration-plan.md  rust-thermal-formula-parity.md  vrc700-settings-audit.md
ebus-core/: Cargo.toml
ebus-core/src/: address.rs  crc.rs  framer.rs  lib.rs  sequence.rs  symbols.rs  telegram.rs
lat.md/: architecture.md  constraints.md  domain.md  heating-control.md  history-evidence.md  infrastructure.md  lat.md  plan.md  postgres-migration.md  reviews.md  tests.md  thermal-model.md  tsdb-migration.md
model/: adaptive-heating-mvp.toml  audit_model_dimensions.py  calibrate.py  control-table.json  extract_house_inventory.py  house.py  overnight.py  test-nights.md  thermal-config.toml
scripts/: backup-sdcard.sh  controller-tsdb-predeploy-check.sh  dhw-auto-trigger.service  dhw-auto-trigger.sh  dhw-inflection-detector.py  dhw-model-analysis.py  ebusd-poll.service  ebusd-poll.sh  live-state.sh  refresh-thermal-baselines.sh  run-controller-tsdb-verify-window.sh  stage-controller-tsdb-verify.sh  sync-to-pi5data.sh  thermal-regression-ci.sh
src/: analysis.rs  config.rs  db.rs  emoncms.rs  gaps.rs  lib.rs  main.rs  octopus.rs  octopus_tariff.rs  overnight.rs  reference.rs  thermal.rs
(+46 files in other folders)
