[package]
name = "heatpump-analysis"
version = "0.1.0"
edition = "2021"
description = "Fetch and analyse heat pump data from emoncms.org using Polars"

[dependencies]
polars = { version = "0.46", features = ["lazy", "pivot", "dtype-datetime", "fmt", "round_series", "temporal"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
