[package]
name = "heatpump-analysis"
version = "0.1.0"
edition = "2021"
description = "Analyse Vaillant Arotherm heat pump data from emoncms.org — state classification, COP analysis, gap-filling"

[dependencies]
polars = { version = "0.46", features = ["lazy", "pivot", "dtype-datetime", "fmt", "round_series", "temporal", "csv", "strings"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.33", features = ["bundled"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
once_cell = "1"
csv = "1"
thiserror = "2"
